--- a/fiveMusicList.html
+++ b/fiveMusicList.html
@@ -65,7 +65,7 @@
                     <h4><a href="https://www.youtube.com/watch?v=FQYcjNxfsoc" target="_blank">"Jaane Kya Baat Hai"</a></h4>
                     <p>Lata Mangeshkar</p>
                     <p>Sunny</p>
-                    <p id="why"><a href="song4.htm">Why fourth -&gt;</a></p>
+                    <p id="why"><a href="song4.html">Why fourth -&gt;</a></p>
                 </div>
             </div>
             <div class="song-contant">
